--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-session": "^2.1.1",
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
+    "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
