--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A website for all your ceremonial duty needs! Bible verses and a community tab are complementary!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js localhost 3000"
   },
   "repository": {
     "type": "git",
